--- a/display-exercise.html
+++ b/display-exercise.html
@@ -16,7 +16,9 @@
   <link rel="stylesheet" type="text/css" href="styles/display-page.css">
 </head>
 <body>
-<!-- your HTML here to implement the colored box design -->
-	<p>Placeholder!</p>
+<main>
+  <div class="inner inner-one"></div>
+  <div class="inner inner-two"></div>
+</main>
 </body>
 </html>
