--- a/position-exercise.html
+++ b/position-exercise.html
@@ -16,19 +16,24 @@
   <!-- your styles go in position-page.css -->
   <link rel="stylesheet" type="text/css" href="styles/position-page.css">
 </head>
-<body>
+<body background="images/outerspace_landscape.jpeg">
   <!-- To finish the design, the HTML for the nav requires no additional elements, just the right CSS -->
-  <nav>
-    <img src="images/icon.png">
+  <nav class="container">
+    <img src="images/icon.png" class="icon">
     <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="display-exercise.html">display</a></li>
-      <li><a href="float-exercise.html">float</a></li>
+      <li><a href="index.html">Home</a> |</li>
+      <li><a href="display-exercise.html">display</a> |</li>
+      <li><a href="float-exercise.html">float</a> |</li>
     </ul>
   </nav>
 
   <main>
-    <!-- Put the HTML you need to accomplish the design -->
+  <div class="images">
+  	<div class="box">
+		<img src="images/spacecat.png" class="spacecat">
+  		<img src="images/spacedog.png" class="spacedog">
+  	</div>
+  </div>
   </main>
 </body>
 </html>
